--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="https://mundoficticio698-png.github.io/Lugares-Tur-sticos-de-El-Salvador/"content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="H7RnbgUyoLHsfSvmZTPLD5DGxKVml6woEtAyC2uPHqU" />
+    <meta name=""content="width=device-width, initial-scale=1.0">
     <title>Lugares Turísticos de El Salvador</title>
     <style>
         body {
